feat(clean code): add log, sparate class, use compliment code and update version